--- a/html/tables/basic/timetable.html
+++ b/html/tables/basic/timetable.html
@@ -32,6 +32,9 @@
   </head>
   <body>
     <h1>School timetable</h1>
+    <caption>
+      Teaching Schedule
+    </caption>
 
     <table>
       <colgroup>
