--- a/html/tables/advanced/items-sold.html
+++ b/html/tables/advanced/items-sold.html
@@ -16,8 +16,8 @@
           <tr>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <th colspan="3" scope="col">Clothes</th>
-            <th colspan="2" scope="col">Accessories</th>
+            <th colspan="3" scope="colgroup">Clothes</th>
+            <th colspan="2" scope="colgroup">Accessories</th>
           </tr>
           <tr>
             <td>&nbsp;</td>
@@ -31,7 +31,7 @@
         </thead>
         <tbody>
           <tr>
-            <th rowspan="3" scope="row">Belgium</th>
+            <th rowspan="3" scope="rowgroup">Belgium</th>
             <th scope="row">Antwerp</th>
             <td>56</td>
             <td>22</td>
@@ -56,7 +56,7 @@
            <td>28</td>
          </tr>
          <tr>
-           <th rowspan="2" scope="row">The Netherlands</th>
+           <th rowspan="2" scope="rowgroup">The Netherlands</th>
            <th scope="row">Amsterdam</th>
            <td>89</td>
            <td>34</td>
