--- a/html/tables/assessment-start/blank-template.html
+++ b/html/tables/assessment-start/blank-template.html
@@ -8,6 +8,43 @@
   </head>
   <body>
     <h1>Table template</h1>
+    <table>
+      <caption>
+        Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
+      </caption>
+      <thead>
+        <tr>
+          <th colspan="2">&nbsp;</th>
+          <th>Name</th>
+          <th>Mass (10<sup>24</sup>kg)</th>
+          <th>Diameter (km)</th>
+          <th>Density (kg/m<sup>3</sup>)</th>
+          <th>Length of day (hours)</th>
+          <th>Main temperature (°C)</th>
+          <th>Number of moons</th>
+          <th>Notes</th>
+        </tr>
+      </thead>
+      <thead>
+        <tr>
+          <th colspan="2" rowspan="3">Terrestrial planets</th>
+        </tr> 
+      </thead>
+      <thead>
+        <tr>
+          <th rowspan="2">Jovian planets</th>
+          <th>Gas giants</th>
+        </tr>
+        <tr><th>Ice giants</th></tr>
+      </thead>
+      <thead>
+        <tr>
+          <th colspan="2">Dwarf planets</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
 
 
   </body>
