--- a/html/tables/assessment-start/blank-template.html
+++ b/html/tables/assessment-start/blank-template.html
@@ -25,24 +25,103 @@
           <th>Notes</th>
         </tr>
       </thead>
-      <thead>
+      <tbody>
         <tr>
-          <th colspan="2" rowspan="3">Terrestrial planets</th>
+          <th colspan="2" rowspan="4">Terrestrial planets</th>
+          <th>Mercury</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr> 
-      </thead>
-      <thead>
         <tr>
-          <th rowspan="2">Jovian planets</th>
-          <th>Gas giants</th>
+          <th>Venus</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
-        <tr><th>Ice giants</th></tr>
-      </thead>
-      <thead>
+        <tr>
+          <th>Earth</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Mars</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th rowspan="4">Jovian planets</th>
+          <th rowspan="2">Gas giants</th>
+          <th>Jupiter</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Saturn</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th rowspan="2">Ice giants</th>
+          <th>Uranus</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Neptune</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+     
         <tr>
           <th colspan="2">Dwarf planets</th>
+          <th>Pluto</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
-      </thead>
-      <tbody>
       </tbody>
     </table>
 
