--- a/html/forms/tasks/form-validation/form-validation1-download.html
+++ b/html/forms/tasks/form-validation/form-validation1-download.html
@@ -28,11 +28,11 @@
         </li>
         <li>
           <label for="email">Email address:</label>
-          <input type="text" name="email" id="email" required>
+          <input type="email" name="email" id="email" required>
         </li>
         <li>
           <label for="phone">Phone number:</label>
-          <input type="text" name="phone" id="phone" required>
+          <input type="number" name="phone" id="phone" required>
         </li>
         <li>
           <label for="comment">Comment:</label>
