--- a/html/forms/tasks/form-validation/form-validation1-download.html
+++ b/html/forms/tasks/form-validation/form-validation1-download.html
@@ -24,7 +24,7 @@
       <ul>
         <li>
           <label for="uname">User name:</label>
-          <input type="text" name="uname" id="uname" required>
+          <input type="text" name="uname" id="uname" minlength="5" maxlength="20" required>
         </li>
         <li>
           <label for="email">Email address:</label>
@@ -32,11 +32,11 @@
         </li>
         <li>
           <label for="phone">Phone number:</label>
-          <input type="number" name="phone" id="phone" required>
+          <input type="number" name="phone" id="phone" max="15" required>
         </li>
         <li>
           <label for="comment">Comment:</label>
-          <textarea name="comment" id="comment" required>
+          <textarea name="comment" id="comment" maxlength="200" required>
           </textarea>
         </li>
         <li>
