--- a/html/forms/tasks/form-validation/form-validation2-download.html
+++ b/html/forms/tasks/form-validation/form-validation2-download.html
@@ -15,6 +15,14 @@
       * {
         box-sizing: border-box;
       }
+
+      input:invalid {
+        background-color: red
+      }
+
+      input:valid {
+        background-color: yellow
+      }
     </style>
   </head>
 
@@ -24,20 +32,20 @@
       <ul>
         <li>
           <label for="uname">User name:</label>
-          <input type="text" name="uname" id="uname" required>
+          <input type="text" name="uname" id="uname" minlength="5" maxlength="20" required pattern="[a-z](\.\w+)">
         </li>
         <li>
           <label for="email">Email address:</label>
-          <input type="text" name="email" id="email" required>
+          <input type="email" name="email" id="email" required pattern="\w+@bigcorp.eu">
         </li>
         <li>
           <label for="phone">Phone number:</label>
-          <input type="text" name="phone" id="phone" required>
+          <input type="tel" name="phone" id="phone" required pattern="\d{10}|(\d{3}).(\d{3}).(\d{4})|(\d{3})-(\d{3})-(\d{4})|(\d{3}) (\d{3}) (\d{4})">
         </li>
         <li>
           <label for="comment">Comment:</label>
-          <textarea name="comment" id="comment" required>
-          </textarea>
+          <textarea name="comment" id="comment" maxlength="200" required>
+          </textarea> 
         </li>
         <li>
           <button>Submit comment</button>
