Add form validation 3

--- a/html/forms/tasks/form-validation/form-validation3-download.html
+++ b/html/forms/tasks/form-validation/form-validation3-download.html
@@ -21,12 +21,32 @@
   <body>
     <form>
       <label for="mail">I would like you to provide me with an e-mail address:</label>
-      <input type="email" id="mail" name="mail">
+      <input type="email" id="mail" name="mail" minlength="10">
       <button>Submit</button>
     </form>
   </body>
   <script>
     const email = document.getElementById("mail");
+    const btn = document.querySelector("button");
+
+    btn.addEventListener("click", (e) => {
+      e.preventDefault();
+      console.log("clicked");
+      validateEmail(email);
+    });
+
+    function validateEmail(input) {
+      const validEmail = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
+
+      if (input.value.match(validEmail)) {
+        alert("Good job, ma man!");
+        return true;
+      }
+
+      alert("We need valid e-mail address, sir");
+      return false;
+    }
+
 
 
   </script>
